--- a/src/PathFindingVisualizer/PathFindingVisualizer.css
+++ b/src/PathFindingVisualizer/PathFindingVisualizer.css
@@ -9,10 +9,13 @@
 }
 
 .secondDiv{
-  margin-top: -3%;
+  margin-top: -2%;
   margin-bottom: 5px;
 }
 
 button {
   margin: 10px;
+  padding: 10px 10px 10px 10px;
+  border-radius: 10px;
+  font-weight: 200;
 }
