--- a/src/PathFindingVisualizer/Node/Node.css
+++ b/src/PathFindingVisualizer/Node/Node.css
@@ -1,16 +1,16 @@
 .node {
   width: 25px;
   height: 25px;
-  outline: 2px solid rgb(32, 31, 31);
+  outline: 2px solid rgb(62, 94, 104);
   display: inline-flex;
 }
 
 .node-finish {
-  background-color: #ff0000;
+  background-color: red;
 }
 
 .node-start {
-  background-color: #0015ff;
+  background-color: green;
 }
 
 .node-visited {
